clippy_output_v5.txt
cargo :     Checking AgroCLI v1.2.0 
(C:\Users\setia\Downloads\AgroCLI)
At line:1 char:1
+ cargo clippy --all-targets 
--all-features -- -D warnings 2>&1 | Out-F 
...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified 
   : (    Checking Ag...nloads\AgroCLI):S  
  tring) [], RemoteException
    + FullyQualifiedErrorId : NativeComman 
   dError
 
error: unknown start of token: `
   --> src\tui.rs:430:37
    |
430 |     
#[allow(clippy::too_many_lines)]`n    
async fn handle_key(&mut self, key: 
event::KeyEvent) {
    |                                     ^
    |
help: Unicode character '`' (Grave Accent) 
looks like ''' (Single Quote), but it is 
not
    |
430 -     
#[allow(clippy::too_many_lines)]`n    
async fn handle_key(&mut self, key: 
event::KeyEvent) {
430 +     
#[allow(clippy::too_many_lines)]'n    
async fn handle_key(&mut self, key: 
event::KeyEvent) {
    |

error: unknown start of token: `
   --> src\tui.rs:926:37
    |
926 |     
#[allow(clippy::too_many_lines)]`n    fn 
draw_tasks(&self, f: &mut Frame) {
    |                                     ^
    |
help: Unicode character '`' (Grave Accent) 
looks like ''' (Single Quote), but it is 
not
    |
926 -     
#[allow(clippy::too_many_lines)]`n    fn 
draw_tasks(&self, f: &mut Frame) {
926 +     
#[allow(clippy::too_many_lines)]'n    fn 
draw_tasks(&self, f: &mut Frame) {
    |

error: unknown start of token: `
    --> src\tui.rs:1207:37
     |
1207 |     
#[allow(clippy::too_many_lines)]`n    fn 
draw_sensor(&self, f: &mut Frame) {
     |                                     
^
     |
help: Unicode character '`' (Grave Accent) 
looks like ''' (Single Quote), but it is 
not
     |
1207 -     
#[allow(clippy::too_many_lines)]`n    fn 
draw_sensor(&self, f: &mut Frame) {
1207 +     
#[allow(clippy::too_many_lines)]'n    fn 
draw_sensor(&self, f: &mut Frame) {
     |

error: expected one of `!` or `::`, found 
keyword `async`
    --> src\tui.rs:430:43
     |
 159 | impl App {
     |          - while parsing this item 
list starting here
...
 430 |     
#[allow(clippy::too_many_lines)]`n    
async fn handle_key(&mut self, key: 
event::KeyEvent) {
     |                                     
      ^^^^^ expected one of `!` or `::`
...
1947 | }
     | - the item list ends here
     |
help: there is a keyword `fn` with a 
similar name
     |
 430 |     
#[allow(clippy::too_many_lines)]`fn    
async fn handle_key(&mut self, key: 
event::KeyEvent) {
     |                                     
 +

error: unused import: `std::fmt::Write`
 --> src\tui.rs:2:5
  |
2 | use std::fmt::Write; // Added for 
efficient string building
  |     ^^^^^^^^^^^^^^^
  |
  = note: `-D unused-imports` implied by 
`-D warnings`
  = help: to override `-D warnings` add 
`#[allow(unused_imports)]`

error: unused imports: `KeyCode` and 
`KeyEventKind`
 --> src\tui.rs:8:26
  |
8 |     event::{self, Event, KeyCode, 
KeyEventKind},
  |                          ^^^^^^^  
^^^^^^^^^^^^

error: unused imports: `ListItem`, `List`, 
and `Wrap`
  --> src\tui.rs:14:33
   |
14 |     widgets::{Block, Paragraph, 
ListItem, List, Borders, BorderType, Wrap},
   |                                 
^^^^^^^^  ^^^^                       ^^^^

error: unused import: `load_rules`
  --> src\tui.rs:19:55
   |
19 | use 
crate::core::{calculate_today_tasks, 
get_weather, load_rules, GardenTask};
   |                                       
                ^^^^^^^^^^

error[E0599]: the method `render` exists 
for struct `tui::App`, but its trait 
bounds were not satisfied
    --> src\tui.rs:2003:31
     |
 106 | struct App {
     | ---------- method `render` not 
found for this struct because it doesn't 
satisfy `tui::App: 
ratatui::widgets::WidgetRef`
...
2003 |         terminal.draw(|f| 
app.render(f))?;
     |                               
^^^^^^ method cannot be called on 
`tui::App` due to unsatisfied trait bounds
     |
     = note: the following trait bounds 
were not satisfied:
             `tui::App: 
ratatui::widgets::WidgetRef`
             which is required by 
`&tui::App: ratatui::widgets::Widget`
note: the trait 
`ratatui::widgets::WidgetRef` must be 
implemented
    --> C:\Users\setia\.cargo\registry\src\
index.crates.io-1949cf8c6b5b557f\ratatui-0.
26.3\src\widgets.rs:300:1
     |
 300 | #[stability::unstable(feature = 
"widget-ref")]
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^
     = help: items from traits can only be 
used if the trait is implemented and in 
scope
     = note: the following traits define 
an item `render`, perhaps you need to 
implement one of them:
             candidate #1: 
`inquire::prompts::prompt::Prompt`
             candidate #2: 
`ratatui::widgets::StatefulWidget`
             candidate #3: 
`ratatui::widgets::Widget`
     = note: this error originates in the 
attribute macro `stability::unstable` (in 
Nightly builds, run with -Z 
macro-backtrace for more info)

error[E0599]: no method named `handle_key` 
found for struct `tui::App` in the current 
scope
    --> src\tui.rs:2015:21
     |
 106 | struct App {
     | ---------- method `handle_key` not 
found for this struct
...
2015 |                 
app.handle_key(key).await;
     |                     ^^^^^^^^^^ 
method not found in `tui::App`

For more information about this error, try 
`rustc --explain E0599`.
error: could not compile `AgroCLI` (bin 
"AgroCLI" test) due to 10 previous errors
warning: build failed, waiting for other 
jobs to finish...
error: could not compile `AgroCLI` (bin 
"AgroCLI") due to 10 previous errors
